--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -2,11 +2,11 @@
 
 <div class="body1">
 	<section class="section1">
-		<img src="../../../assets/stars.png" id="stars">
+		<img src="../../../assets/clouds-1.png" id="stars">
 		<img src="../../../assets/moon.png" id="moon">
-		<img src="../../../assets/mountains_behind.png" id="mountains_behind">
+		<img class="altair-izquierda" src="../../../assets/altair-izquierda.png" id="mountains_behind">
 		
-		<h2 id="text">Moon Light</h2>
+		<h2 id="text">Altair Library</h2>
 		
 		<a id="superBtn" (click)="goToBookList()" *ngIf="userInfo | async as user; else GoButton">Vamos allá !</a>
 		
@@ -14,11 +14,11 @@
 			<a id="superBtn" routerLink='/login'>Login !</a>
 		</ng-template>
 		
-		<img src="../../../assets/mountains_front.png" id="mountains_front">
+		<img src="../../../assets/altair-derecha.png" id="mountains_front">
 	</section>
 
 	<div class="sec" id="sec">
-		<h2>Parallax Scrolling Effects</h2>
+		<h2>Hola Lector. Bienvedido de nuevo.</h2>
 		<br>
 		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error pariatur itaque culpa ullam esse cumque. Consequatur velit aliquid laborum expedita adipisci sed distinctio temporibus minima, quae optio vitae obcaecati! Hic officiis labore recusandae! Est in illo veniam vel quisquam error vitae eveniet? Reprehenderit aut dignissimos libero harum natus architecto, ipsum incidunt doloremque dolores, similique in porro pariatur! Beatae, provident soluta, possimus a in perferendis ad, ratione necessitatibus quia quam obcaecati repudiandae fugit quo nobis animi dolore vel error. Ab eaque ex nulla, dignissimos sapiente corporis blanditiis corrupti quis, impedit itaque odio facilis earum fuga commodi totam! Accusamus, deleniti? Tempore, qui!</p>
 		<br>
@@ -26,44 +26,46 @@
 	</div>
 </div>
 
-<!-- <div class="body2">
-	<section class="section2">
-		<div class="content1">
-			<h2 class="h2-2">Non-Rectangular Header</h2>
-		</div>
-	</section>
-</div> -->
-
 <div class="body2">
 	<section class="section2">
 		<span class="curve">
-			<img class="img2" src="../../../assets/curve.png" alt=""> <!-- aquí tengo que poner el recorte semicircular de la parte de abajo de la foto que pongo como background del section -->
+			<img class="img2" src="../../../assets/altair-2-2.png" alt=""> <!-- aquí tengo que poner el recorte semicircular de la parte de abajo de la foto que pongo como background del section -->
 		</span>
 	</section>
 </div>
 
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error pariatur itaque culpa ullam esse cumque. Consequatur velit aliquid laborum expedita adipisci sed distinctio temporibus minima, quae optio vitae obcaecati! Hic officiis labore recusandae! Est in illo veniam vel quisquam error vitae eveniet? Reprehenderit aut dignissimos libero harum natus architecto, ipsum incidunt doloremque dolores, similique in porro pariatur! Beatae, provident soluta, possimus a in perferendis ad, ratione necessitatibus quia quam obcaecati repudiandae fugit quo nobis animi dolore vel error. Ab eaque ex nulla, dignissimos sapiente corporis blanditiis corrupti quis, impedit itaque odio facilis earum fuga commodi totam! Accusamus, deleniti? Tempore, qui!</p>
-		<br>
-		<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic et odio aliquid quod, amet perspiciatis dolor, laborum molestias inventore, soluta mollitia. Corrupti, vitae dolorum. Odit in sequi autem eveniet. Hic, tenetur! Fugit in nobis aspernatur quibusdam quia. Quia nesciunt neque necessitatibus ad assumenda! Alias omnis facere dolore est, aut expedita laborum iste id quasi quidem et consequuntur. Ullam officiis voluptas culpa, recusandae enim quod deleniti similique ut dolor sunt iusto amet eaque, fugiat aut. Quisquam unde odit deserunt molestias ullam quasi aliquam. Aliquid vel porro repudiandae temporibus ullam! Expedita aperiam labore velit deleniti officiis unde error ipsam cumque fuga molestiae?</p>
+<br><br><br>
 
-		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error pariatur itaque culpa ullam esse cumque. Consequatur velit aliquid laborum expedita adipisci sed distinctio temporibus minima, quae optio vitae obcaecati! Hic officiis labore recusandae! Est in illo veniam vel quisquam error vitae eveniet? Reprehenderit aut dignissimos libero harum natus architecto, ipsum incidunt doloremque dolores, similique in porro pariatur! Beatae, provident soluta, possimus a in perferendis ad, ratione necessitatibus quia quam obcaecati repudiandae fugit quo nobis animi dolore vel error. Ab eaque ex nulla, dignissimos sapiente corporis blanditiis corrupti quis, impedit itaque odio facilis earum fuga commodi totam! Accusamus, deleniti? Tempore, qui!</p>
-		<br>
-		<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic et odio aliquid quod, amet perspiciatis dolor, laborum molestias inventore, soluta mollitia. Corrupti, vitae dolorum. Odit in sequi autem eveniet. Hic, tenetur! Fugit in nobis aspernatur quibusdam quia. Quia nesciunt neque necessitatibus ad assumenda! Alias omnis facere dolore est, aut expedita laborum iste id quasi quidem et consequuntur. Ullam officiis voluptas culpa, recusandae enim quod deleniti similique ut dolor sunt iusto amet eaque, fugiat aut. Quisquam unde odit deserunt molestias ullam quasi aliquam. Aliquid vel porro repudiandae temporibus ullam! Expedita aperiam labore velit deleniti officiis unde error ipsam cumque fuga molestiae?</p>
+<div class="sec" id="sec">
+	<h2>Constancia, dedicación, y mucha ilusión.</h2>
+	<br>
+	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error pariatur itaque culpa ullam esse cumque. Consequatur velit aliquid laborum expedita adipisci sed distinctio temporibus minima, quae optio vitae obcaecati! Hic officiis labore recusandae! Est in illo veniam vel quisquam error vitae eveniet? Reprehenderit aut dignissimos libero harum natus architecto, ipsum incidunt doloremque dolores, similique in porro pariatur! Beatae, provident soluta, possimus a in perferendis ad, ratione necessitatibus quia quam obcaecati repudiandae fugit quo nobis animi dolore vel error. Ab eaque ex nulla, dignissimos sapiente corporis blanditiis corrupti quis, impedit itaque odio facilis earum fuga commodi totam! Accusamus, deleniti? Tempore, qui!</p>
+	<br>
+	<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic et odio aliquid quod, amet perspiciatis dolor, laborum molestias inventore, soluta mollitia. Corrupti, vitae dolorum. Odit in sequi autem eveniet. Hic, tenetur! Fugit in nobis aspernatur quibusdam quia. Quia nesciunt neque necessitatibus ad assumenda! Alias omnis facere dolore est, aut expedita laborum iste id quasi quidem et consequuntur. Ullam officiis voluptas culpa, recusandae enim quod deleniti similique ut dolor sunt iusto amet eaque, fugiat aut. Quisquam unde odit deserunt molestias ullam quasi aliquam. Aliquid vel porro repudiandae temporibus ullam! Expedita aperiam labore velit deleniti officiis unde error ipsam cumque fuga molestiae?</p>
+</div>
 
+<div class="body3">
+	<section class="section3">
+		<div class="book book1">
+			<img src="https://blogger.googleusercontent.com/img/a/AVvXsEhvrKo0zaZybYjfVOijLf420tl2ZJ_tRWrwZnF0IJ-jXNnrSexA9Z9fqeNeEdVHKsFbarV-mbJiJ_DTjzq3qSeb1aYlouqBcM6Ekp5NHqwsfm4zK0ZRDrCiojyakp5q5fY0Cd0Hn4e61fBBxlKde8MW3WSlvt-FD0-8dFot6KlrazRlTWkwa0-hIwhb=w242-h320" alt="">
+		</div>
+		<div class="book book2">
+			<img src="https://blogger.googleusercontent.com/img/a/AVvXsEi4Y5Vfi6WP-6WaCvmWcFIbcVvStaayA1fMrGkmlFKr2vkRNDnuI09kSokLr4S7OlcH0ZK_e1V4Rp-OUx6czGW-l0H5n9kvagWhaR2q6VGBTvq1Wg-Jjd9nqkYciJ9YlD_wia2HA9ZjoxrbfsWIA_i8grz1bWDK0uH0S-ErzPJPLl27gnp29WSDnIci=w213-h320" alt="">
+		</div>
+		<div class="book book3">
+			<img src="https://blogger.googleusercontent.com/img/a/AVvXsEik6OfZDsPsfHsRPVj4-job9-sgeI_FCr1asEgOBaIEdE9r61bLsIzhFpl28W4Se7FBYIFbXdiAq7y67_1j6QiraYgoCGcX8PYwXR7X3Y3AbCBxGZ8wfPpD6fOLYAUFmmZRQ_7zTB61uoirZHCBK1cDTAP3t-p6MjY-esTHYXPysqyas7VUPZL2eD0x=w212-h320" alt="">
+		</div>
+	</section>
 
-		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error pariatur itaque culpa ullam esse cumque. Consequatur velit aliquid laborum expedita adipisci sed distinctio temporibus minima, quae optio vitae obcaecati! Hic officiis labore recusandae! Est in illo veniam vel quisquam error vitae eveniet? Reprehenderit aut dignissimos libero harum natus architecto, ipsum incidunt doloremque dolores, similique in porro pariatur! Beatae, provident soluta, possimus a in perferendis ad, ratione necessitatibus quia quam obcaecati repudiandae fugit quo nobis animi dolore vel error. Ab eaque ex nulla, dignissimos sapiente corporis blanditiis corrupti quis, impedit itaque odio facilis earum fuga commodi totam! Accusamus, deleniti? Tempore, qui!</p>
-		<br>
-		<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic et odio aliquid quod, amet perspiciatis dolor, laborum molestias inventore, soluta mollitia. Corrupti, vitae dolorum. Odit in sequi autem eveniet. Hic, tenetur! Fugit in nobis aspernatur quibusdam quia. Quia nesciunt neque necessitatibus ad assumenda! Alias omnis facere dolore est, aut expedita laborum iste id quasi quidem et consequuntur. Ullam officiis voluptas culpa, recusandae enim quod deleniti similique ut dolor sunt iusto amet eaque, fugiat aut. Quisquam unde odit deserunt molestias ullam quasi aliquam. Aliquid vel porro repudiandae temporibus ullam! Expedita aperiam labore velit deleniti officiis unde error ipsam cumque fuga molestiae?</p>
-
-
-		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error pariatur itaque culpa ullam esse cumque. Consequatur velit aliquid laborum expedita adipisci sed distinctio temporibus minima, quae optio vitae obcaecati! Hic officiis labore recusandae! Est in illo veniam vel quisquam error vitae eveniet? Reprehenderit aut dignissimos libero harum natus architecto, ipsum incidunt doloremque dolores, similique in porro pariatur! Beatae, provident soluta, possimus a in perferendis ad, ratione necessitatibus quia quam obcaecati repudiandae fugit quo nobis animi dolore vel error. Ab eaque ex nulla, dignissimos sapiente corporis blanditiis corrupti quis, impedit itaque odio facilis earum fuga commodi totam! Accusamus, deleniti? Tempore, qui!</p>
-		<br>
-		<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic et odio aliquid quod, amet perspiciatis dolor, laborum molestias inventore, soluta mollitia. Corrupti, vitae dolorum. Odit in sequi autem eveniet. Hic, tenetur! Fugit in nobis aspernatur quibusdam quia. Quia nesciunt neque necessitatibus ad assumenda! Alias omnis facere dolore est, aut expedita laborum iste id quasi quidem et consequuntur. Ullam officiis voluptas culpa, recusandae enim quod deleniti similique ut dolor sunt iusto amet eaque, fugiat aut. Quisquam unde odit deserunt molestias ullam quasi aliquam. Aliquid vel porro repudiandae temporibus ullam! Expedita aperiam labore velit deleniti officiis unde error ipsam cumque fuga molestiae?</p>
-
-		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error pariatur itaque culpa ullam esse cumque. Consequatur velit aliquid laborum expedita adipisci sed distinctio temporibus minima, quae optio vitae obcaecati! Hic officiis labore recusandae! Est in illo veniam vel quisquam error vitae eveniet? Reprehenderit aut dignissimos libero harum natus architecto, ipsum incidunt doloremque dolores, similique in porro pariatur! Beatae, provident soluta, possimus a in perferendis ad, ratione necessitatibus quia quam obcaecati repudiandae fugit quo nobis animi dolore vel error. Ab eaque ex nulla, dignissimos sapiente corporis blanditiis corrupti quis, impedit itaque odio facilis earum fuga commodi totam! Accusamus, deleniti? Tempore, qui!</p>
-		<br>
-		<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic et odio aliquid quod, amet perspiciatis dolor, laborum molestias inventore, soluta mollitia. Corrupti, vitae dolorum. Odit in sequi autem eveniet. Hic, tenetur! Fugit in nobis aspernatur quibusdam quia. Quia nesciunt neque necessitatibus ad assumenda! Alias omnis facere dolore est, aut expedita laborum iste id quasi quidem et consequuntur. Ullam officiis voluptas culpa, recusandae enim quod deleniti similique ut dolor sunt iusto amet eaque, fugiat aut. Quisquam unde odit deserunt molestias ullam quasi aliquam. Aliquid vel porro repudiandae temporibus ullam! Expedita aperiam labore velit deleniti officiis unde error ipsam cumque fuga molestiae?</p>
-
-		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error pariatur itaque culpa ullam esse cumque. Consequatur velit aliquid laborum expedita adipisci sed distinctio temporibus minima, quae optio vitae obcaecati! Hic officiis labore recusandae! Est in illo veniam vel quisquam error vitae eveniet? Reprehenderit aut dignissimos libero harum natus architecto, ipsum incidunt doloremque dolores, similique in porro pariatur! Beatae, provident soluta, possimus a in perferendis ad, ratione necessitatibus quia quam obcaecati repudiandae fugit quo nobis animi dolore vel error. Ab eaque ex nulla, dignissimos sapiente corporis blanditiis corrupti quis, impedit itaque odio facilis earum fuga commodi totam! Accusamus, deleniti? Tempore, qui!</p>
-		<br>
-		<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic et odio aliquid quod, amet perspiciatis dolor, laborum molestias inventore, soluta mollitia. Corrupti, vitae dolorum. Odit in sequi autem eveniet. Hic, tenetur! Fugit in nobis aspernatur quibusdam quia. Quia nesciunt neque necessitatibus ad assumenda! Alias omnis facere dolore est, aut expedita laborum iste id quasi quidem et consequuntur. Ullam officiis voluptas culpa, recusandae enim quod deleniti similique ut dolor sunt iusto amet eaque, fugiat aut. Quisquam unde odit deserunt molestias ullam quasi aliquam. Aliquid vel porro repudiandae temporibus ullam! Expedita aperiam labore velit deleniti officiis unde error ipsam cumque fuga molestiae?</p>
+	<section class="section3">
+		<div class="book book4">
+			<img src="https://blogger.googleusercontent.com/img/a/AVvXsEhgStjM3ndsqEa3ubZzMCU15STrOKwHOhNblh0efSWXOMinfwq_eqrXJdhW6lPWavwe8SiOGAVw1B7DwDcW4sNhMUn1Q7Sq_o5aN2j0_GnkJadho3-HpauqRRmqDn8EWPIB3W_eWdQoVvmmZWy1Oeb3pgS4waHxv4obP4mC5Oyx3qHeOncu2jOjab2I=w209-h320" alt="">
+		</div>
+		<div class="book book5">
+			<img src="https://blogger.googleusercontent.com/img/a/AVvXsEi-qcXqoxWkDmHrAx9pJ1tKQZoMgxQ63Gg9pKmzzjGkoJjkKkx9-7pD8juyhB6CaAjwM4zr5GAPvFcmzaLqxEuxNKIJDVedlGrmd2Me8O0ba6vsCReKUq1mX4VmBzrc9UsTcIAhs7PifFh_sCLeTEn-QakoKKow5znGeE-T4B5gzBOzbbDzqcNXr4s1=w209-h320" alt="">
+		</div>
+		<div class="book book6">
+			<img src="https://blogger.googleusercontent.com/img/a/AVvXsEgUlQ8_nRbQYG6o1TbamRTTogj5ogwPwc3YIyPAI9bBDYcl-P1tA7u3FoYhXxK-iFsrga69DaGrnXTR0eUNUVvyfpkrVuYh_g-UiHmim5Fb17HgstgEmdme76NKkg8Ko3UKCnvQQn9nRzz9UoVBbCsTJ_wuU_5VqMA_0V4RScQLAzfY3PTMuYpiAiLG=w204-h320" alt="">
+		</div>
+	</section>
+</div>
