--- a/src/app/Books/edit-book-rtdb/edit-book-rtdb.component.html
+++ b/src/app/Books/edit-book-rtdb/edit-book-rtdb.component.html
@@ -1,52 +1,61 @@
 <!-- <p>edit-book-rtdb works!</p> -->
 
-<mat-toolbar class="toolbar-title">Edit Book | RealTimeDB</mat-toolbar>
+<mat-toolbar class="toolbar-title">   Add a New Book | RealTimeDB</mat-toolbar>
 
-<div class="edit-book-form" *ngIf="book">
-    <a [routerLink]="['/book-list']">Back</a>
+<section *ngIf="book">
+    <form class="superContainer" #values="ngForm" [formGroup]="bookForm">
+        <h2>Glassmorphing Contact Us Form</h2>
 
-    <form #values="ngForm" [formGroup]="bookForm">
-      <mat-form-field class="full-width">
-        <input matInput placeholder="Book Title" name="title" id="title" formControlName="title" [class]="isValid('title')" required>
-      </mat-form-field>
+        <div class="row100">
+            <div class="col">
+                <div class="inputBox">
+                    <input type="text" placeholder="Book Title" name="title" id="title" formControlName="title" [class]="isValid('title')" required>
+                    <span class="text">Title</span>
+                    <span class="line"></span>
+                </div>
+            </div>
 
-      <mat-form-field class="full-width">
-        <input matInput placeholder="Book Author" name="author" id="author" formControlName="author" [class]="isValid('author')" required>
-      </mat-form-field>
+            <div class="col">
+                <div class="inputBox">
+                    <input type="text" placeholder="Book Author" name="author" id="author" formControlName="author" [class]="isValid('author')" required>
+                    <span class="text">Author</span>
+                    <span class="line"></span>
+                </div>
+            </div>
+        </div>
 
-      <mat-form-field class="full-width">
-        <input matInput placeholder="Book Price" type="number" name="price" id="price" formControlName="price" [class]="isValid('price')" required>
-      </mat-form-field>
-      
-      <mat-form-field class="full-width">
-        <textarea matInput name="description" id="description" rows="5" placeholder="Book Description" formControlName="description" [class]="isValid('description')"></textarea>
-      </mat-form-field>
-    
-      <mat-form-field class="full-width">
-        <input matInput placeholder="Book Rate (1-5)" min="1" max="5" step="0.1" type="number" name="rate" id="rate" formControlName="rate" [class]="isValid('rate')">
-      </mat-form-field>    
-     
+        <div class="row100">
+            <div class="col">
+                <div class="inputBox">
+                    <input type="number" placeholder="Book Price" type="number" name="price" id="price" formControlName="price" [class]="isValid('price')" required>
+                    <span class="text">Price</span>
+                    <span class="line"></span>
+                </div>
+            </div>
 
-      <mat-form-field class="third-width">
-        <input matInput placeholder="Image URL (enter image URL)" type="url" name="imagePortada" id="imagePortada" formControlName="imagePortada" [class]="isValid('imagePortada')" required>
-      </mat-form-field>
+            <div class="col">
+                <div class="inputBox">
+                    <input placeholder="Image URL (enter image URL)" type="url" name="imagePortada" id="imagePortada" formControlName="imagePortada" [class]="isValid('imagePortada')" required>
+                    <span class="text">Image URL</span>
+                    <span class="line"></span>
+                </div>
+            </div>
+        </div>
 
-      <img src="{{book.imagePortada}}">
-      
-      <hr>
+        <div class="row100">
+            <div class="col">
+                <div class="inputBox textarea">
+                    <textarea name="description" id="description" rows="5" placeholder="Book Description" formControlName="description" [class]="isValid('description')"></textarea>
+                    <span class="text">Description ...</span>
+                    <span class="line"></span>
+                </div>
+            </div>
+        </div>
 
-      <!-- <button class="a" (click)="updateBook_v2()" value="updateBook">Update Book</button> -->
-
-      <button type="submit" class="a" (click)="updateBook_v2()">
-        Update
-      </button>
-      <p>{{ message }}</p>
-
-      <div *ngIf="!book">
-        <br />
-        <p>Cannot access this Book...</p>
-      </div>
-      <br><br>
-    
+        <div class="row100">
+            <div class="col">
+                <input type="submit" (click)="updateBook_v2()">
+            </div>
+        </div>
     </form>
-</div>
+</section>
